    harp_get_option_hdf5_compression() functions to C library.
  - Added --hdf5-compression option to harpconvert and harpmerge.
  - Added hdf5_compression parameter to harp.export_product() Python function.

* Allow regrid() operation to interpolate in the time dimension.

* Improved binning of angle values (average of 1 and 359 is now 0).

* Added bin() operation variant without parameters.

* Added -ap option to harpmerge.

* Added --dataset option to harpdump and changed output format of
  harp_dataset_print() and harp_product_metadata_print() to csv format.

* Added 'operations' parameter to Python harp.export_product() function.

* Importing/exporting a product with operations in Python now automatically
  updates the history attribute.

* Fixed issue where harpmerge did not introduce a time dimension for all
  variables.

* Fixed issue where datetime_start and datetime_stop global attributes were not
  created when exporting in HDF4 or HDF5 format.

* String attributes in HDF5 files can now be empty strings (using H5S_NULL).

* Allow HARP to import HDF5 files that are generated by the netCDF4 library
  (allow numeric attributes to be 1-element arrays instead of scalars).

* harpcheck now returns with exit code 1 if any of the imports fail.

* Fixed performance issue with spatial filtering on systems with slow math lib.

* Fixed mapping description of GOME2 L1 product ingestion.

* Fixed wrong results of area overlap calculation.

* Replaced '_' by '-' in long versions of argument names of harpcollocate.

* Added support for dfs (degrees of freedom for signal) profiles.

* Updates to S5P L2 product ingestions.

1.1 2017-11-06
~~~~~~~~~~~~~~

* Parameters that required a file or a directory as dataset reference can now
  also take a file with a .pth extension as input. This file should contain a
  line-separated list of paths to files and/or directories of the dataset.

* Specifying a directory for a dataset will now recursively add all products